// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots material-ui/Component/RegisterForm/Stand Alone Version already registered 1`] = `
<div
  className="MuiPaper-root-476 MuiPaper-shadow2-480 MuiPaper-rounded-477"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="MuiFormControl-root-503"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-513 MuiInputLabel-root-507 MuiInputLabel-formControl-508 MuiInputLabel-animated-511 MuiInputLabel-shrink-510"
        data-shrink={true}
        htmlFor="displayNameDisplayNameInput"
      >
        Display Name
      </label>
      <div
        className="MuiInput-root-517 MuiInput-formControl-518 MuiInput-inkbar-519 MuiInput-underline-523"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-526 MuiInput-inputSingleline-529"
          defaultValue={undefined}
          disabled={false}
          id="displayNameDisplayNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="text"
          value="Mr. Adam"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-503"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-513 MuiInputLabel-root-507 MuiInputLabel-formControl-508 MuiInputLabel-animated-511 MuiInputLabel-shrink-510"
        data-shrink={true}
        htmlFor="userNameUserNameInput"
      >
        User Email
      </label>
      <div
        className="MuiInput-root-517 MuiInput-formControl-518 MuiInput-inkbar-519 MuiInput-underline-523"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-526 MuiInput-inputSingleline-529"
          defaultValue={undefined}
          disabled={false}
          id="userNameUserNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="email"
          value="adam"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-503"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-513 MuiInputLabel-root-507 MuiInputLabel-formControl-508 MuiInputLabel-animated-511 MuiInputLabel-shrink-510"
        data-shrink={true}
        htmlFor="passwordPasswordInput"
      >
        Password
      </label>
      <div
        className="MuiInput-root-517 MuiInput-formControl-518 MuiInput-inkbar-519 MuiInput-underline-523"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-526 MuiInput-inputSingleline-529"
          defaultValue={undefined}
          disabled={false}
          id="passwordPasswordInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="password"
          value="123"
        />
      </div>
    </div>
  </section>
  <p>
    This Email is already registered! Please 
    <a
      href="/#/login"
    >
      login
    </a>
    !
  </p>
  <button
    className="MuiButtonBase-root-547 MuiButton-root-532 MuiButton-raised-539 MuiButton-raisedPrimary-541"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-534"
    >
      Register & Enjoy!
    </span>
    <span
      className="MuiTouchRipple-root-549"
    />
  </button>
</div>
`;

exports[`Storyshots material-ui/Component/RegisterForm/Stand Alone Version initial 1`] = `
<div
  className="MuiPaper-root-316 MuiPaper-shadow2-320 MuiPaper-rounded-317"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="MuiFormControl-root-343"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-353 MuiInputLabel-root-347 MuiInputLabel-formControl-348 MuiInputLabel-animated-351"
        data-shrink={false}
        htmlFor="displayNameDisplayNameInput"
      >
        Display Name
      </label>
      <div
        className="MuiInput-root-357 MuiInput-formControl-358 MuiInput-inkbar-359 MuiInput-underline-363"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-366 MuiInput-inputSingleline-369"
          defaultValue={undefined}
          disabled={false}
          id="displayNameDisplayNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-343"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-353 MuiInputLabel-root-347 MuiInputLabel-formControl-348 MuiInputLabel-animated-351"
        data-shrink={false}
        htmlFor="userNameUserNameInput"
      >
        User Email
      </label>
      <div
        className="MuiInput-root-357 MuiInput-formControl-358 MuiInput-inkbar-359 MuiInput-underline-363"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-366 MuiInput-inputSingleline-369"
          defaultValue={undefined}
          disabled={false}
          id="userNameUserNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="email"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-343"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-353 MuiInputLabel-root-347 MuiInputLabel-formControl-348 MuiInputLabel-animated-351"
        data-shrink={false}
        htmlFor="passwordPasswordInput"
      >
        Password
      </label>
      <div
        className="MuiInput-root-357 MuiInput-formControl-358 MuiInput-inkbar-359 MuiInput-underline-363"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-366 MuiInput-inputSingleline-369"
          defaultValue={undefined}
          disabled={false}
          id="passwordPasswordInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="password"
          value=""
        />
      </div>
    </div>
  </section>
  <button
    className="MuiButtonBase-root-387 MuiButton-root-372 MuiButton-raised-379 MuiButton-raisedPrimary-381"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-374"
    >
      Register & Enjoy!
    </span>
    <span
      className="MuiTouchRipple-root-389"
    />
  </button>
</div>
`;

exports[`Storyshots material-ui/Component/RegisterForm/Stand Alone Version network failure 1`] = `
<div
  className="MuiPaper-root-556 MuiPaper-shadow2-560 MuiPaper-rounded-557"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="MuiFormControl-root-583"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-593 MuiInputLabel-root-587 MuiInputLabel-formControl-588 MuiInputLabel-animated-591 MuiInputLabel-shrink-590"
        data-shrink={true}
        htmlFor="displayNameDisplayNameInput"
      >
        Display Name
      </label>
      <div
        className="MuiInput-root-597 MuiInput-formControl-598 MuiInput-inkbar-599 MuiInput-underline-603"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-606 MuiInput-inputSingleline-609"
          defaultValue={undefined}
          disabled={false}
          id="displayNameDisplayNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="text"
          value="Mr. Adam"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-583"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-593 MuiInputLabel-root-587 MuiInputLabel-formControl-588 MuiInputLabel-animated-591 MuiInputLabel-shrink-590"
        data-shrink={true}
        htmlFor="userNameUserNameInput"
      >
        User Email
      </label>
      <div
        className="MuiInput-root-597 MuiInput-formControl-598 MuiInput-inkbar-599 MuiInput-underline-603"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-606 MuiInput-inputSingleline-609"
          defaultValue={undefined}
          disabled={false}
          id="userNameUserNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="email"
          value="adam"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-583"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-593 MuiInputLabel-root-587 MuiInputLabel-formControl-588 MuiInputLabel-animated-591 MuiInputLabel-shrink-590"
        data-shrink={true}
        htmlFor="passwordPasswordInput"
      >
        Password
      </label>
      <div
        className="MuiInput-root-597 MuiInput-formControl-598 MuiInput-inkbar-599 MuiInput-underline-603"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-606 MuiInput-inputSingleline-609"
          defaultValue={undefined}
          disabled={false}
          id="passwordPasswordInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="password"
          value="123"
        />
      </div>
    </div>
  </section>
  <p>
    Check the internet connection? try again later?
  </p>
  <button
    className="MuiButtonBase-root-627 MuiButton-root-612 MuiButton-raised-619 MuiButton-raisedPrimary-621"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-614"
    >
      Register & Enjoy!
    </span>
    <span
      className="MuiTouchRipple-root-629"
    />
  </button>
</div>
`;

exports[`Storyshots material-ui/Component/RegisterForm/Stand Alone Version registering 1`] = `
<div
  className="MuiPaper-root-396 MuiPaper-shadow2-400 MuiPaper-rounded-397"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="MuiFormControl-root-423"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-433 MuiInputLabel-root-427 MuiInputLabel-formControl-428 MuiInputLabel-animated-431 MuiInputLabel-shrink-430"
        data-shrink={true}
        htmlFor="displayNameDisplayNameInput"
      >
        Display Name
      </label>
      <div
        className="MuiInput-root-437 MuiInput-formControl-438 MuiInput-inkbar-439 MuiInput-underline-443"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-446 MuiInput-inputSingleline-449"
          defaultValue={undefined}
          disabled={false}
          id="displayNameDisplayNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="text"
          value="Mr. Adam"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-423"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-433 MuiInputLabel-root-427 MuiInputLabel-formControl-428 MuiInputLabel-animated-431 MuiInputLabel-shrink-430"
        data-shrink={true}
        htmlFor="userNameUserNameInput"
      >
        User Email
      </label>
      <div
        className="MuiInput-root-437 MuiInput-formControl-438 MuiInput-inkbar-439 MuiInput-underline-443"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-446 MuiInput-inputSingleline-449"
          defaultValue={undefined}
          disabled={false}
          id="userNameUserNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="email"
          value="adam"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-423"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-433 MuiInputLabel-root-427 MuiInputLabel-formControl-428 MuiInputLabel-animated-431 MuiInputLabel-shrink-430"
        data-shrink={true}
        htmlFor="passwordPasswordInput"
      >
        Password
      </label>
      <div
        className="MuiInput-root-437 MuiInput-formControl-438 MuiInput-inkbar-439 MuiInput-underline-443"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-446 MuiInput-inputSingleline-449"
          defaultValue={undefined}
          disabled={false}
          id="passwordPasswordInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="password"
          value="123"
        />
      </div>
    </div>
  </section>
  <button
    className="MuiButtonBase-root-467 MuiButton-root-452 MuiButton-raised-459 MuiButton-raisedPrimary-461"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-454"
    >
      Register & Enjoy!
    </span>
    <span
      className="MuiTouchRipple-root-469"
    />
  </button>
</div>
`;

exports[`Storyshots material-ui/Component/RegisterForm/Stand Alone Version validation email sent with additional phrase 1`] = `
<div
  className="MuiPaper-root-716 MuiPaper-shadow2-720 MuiPaper-rounded-717"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="MuiFormControl-root-743"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-753 MuiInputLabel-root-747 MuiInputLabel-formControl-748 MuiInputLabel-animated-751 MuiInputLabel-shrink-750"
        data-shrink={true}
        htmlFor="displayNameDisplayNameInput"
      >
        Display Name
      </label>
      <div
        className="MuiInput-root-757 MuiInput-formControl-758 MuiInput-inkbar-759 MuiInput-underline-763"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-766 MuiInput-inputSingleline-769"
          defaultValue={undefined}
          disabled={false}
          id="displayNameDisplayNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="text"
          value="Mr. Adam"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-743"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-753 MuiInputLabel-root-747 MuiInputLabel-formControl-748 MuiInputLabel-animated-751 MuiInputLabel-shrink-750"
        data-shrink={true}
        htmlFor="userNameUserNameInput"
      >
        User Email
      </label>
      <div
        className="MuiInput-root-757 MuiInput-formControl-758 MuiInput-inkbar-759 MuiInput-underline-763"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-766 MuiInput-inputSingleline-769"
          defaultValue={undefined}
          disabled={false}
          id="userNameUserNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="email"
          value="adam"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-743"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-753 MuiInputLabel-root-747 MuiInputLabel-formControl-748 MuiInputLabel-animated-751 MuiInputLabel-shrink-750"
        data-shrink={true}
        htmlFor="passwordPasswordInput"
      >
        Password
      </label>
      <div
        className="MuiInput-root-757 MuiInput-formControl-758 MuiInput-inkbar-759 MuiInput-underline-763"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-766 MuiInput-inputSingleline-769"
          defaultValue={undefined}
          disabled={false}
          id="passwordPasswordInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="password"
          value="123"
        />
      </div>
    </div>
  </section>
  <p>
    We just sent a email to validate your email address!
     And this is post email validation phrase addition!!!
  </p>
  <button
    className="MuiButtonBase-root-787 MuiButton-root-772 MuiButton-raised-779 MuiButton-raisedPrimary-781"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-774"
    >
      Register & Enjoy!
    </span>
    <span
      className="MuiTouchRipple-root-789"
    />
  </button>
</div>
`;

exports[`Storyshots material-ui/Component/RegisterForm/Stand Alone Version validation email sent without additional phrase 1`] = `
<div
  className="MuiPaper-root-636 MuiPaper-shadow2-640 MuiPaper-rounded-637"
  style={
    Object {
      "display": "flex",
      "flexFlow": "column",
      "marginBottom": "24px",
      "marginTop": "24px",
    }
  }
>
  <section
    style={
      Object {
        "display": "flex",
        "flexFlow": "column",
      }
    }
  >
    <div
      className="MuiFormControl-root-663"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-673 MuiInputLabel-root-667 MuiInputLabel-formControl-668 MuiInputLabel-animated-671 MuiInputLabel-shrink-670"
        data-shrink={true}
        htmlFor="displayNameDisplayNameInput"
      >
        Display Name
      </label>
      <div
        className="MuiInput-root-677 MuiInput-formControl-678 MuiInput-inkbar-679 MuiInput-underline-683"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-686 MuiInput-inputSingleline-689"
          defaultValue={undefined}
          disabled={false}
          id="displayNameDisplayNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="text"
          value="Mr. Adam"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-663"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-673 MuiInputLabel-root-667 MuiInputLabel-formControl-668 MuiInputLabel-animated-671 MuiInputLabel-shrink-670"
        data-shrink={true}
        htmlFor="userNameUserNameInput"
      >
        User Email
      </label>
      <div
        className="MuiInput-root-677 MuiInput-formControl-678 MuiInput-inkbar-679 MuiInput-underline-683"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-686 MuiInput-inputSingleline-689"
          defaultValue={undefined}
          disabled={false}
          id="userNameUserNameInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="email"
          value="adam"
        />
      </div>
    </div>
    <div
      className="MuiFormControl-root-663"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root-673 MuiInputLabel-root-667 MuiInputLabel-formControl-668 MuiInputLabel-animated-671 MuiInputLabel-shrink-670"
        data-shrink={true}
        htmlFor="passwordPasswordInput"
      >
        Password
      </label>
      <div
        className="MuiInput-root-677 MuiInput-formControl-678 MuiInput-inkbar-679 MuiInput-underline-683"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <input
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-686 MuiInput-inputSingleline-689"
          defaultValue={undefined}
          disabled={false}
          id="passwordPasswordInput"
          name={undefined}
          onChange={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="password"
          value="123"
        />
      </div>
    </div>
  </section>
  <p>
    We just sent a email to validate your email address!
    
  </p>
  <button
    className="MuiButtonBase-root-707 MuiButton-root-692 MuiButton-raised-699 MuiButton-raisedPrimary-701"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label-694"
    >
      Register & Enjoy!
    </span>
    <span
      className="MuiTouchRipple-root-709"
    />
  </button>
</div>
`;
